# resource-forecaster

./: IMPLEMENTATION_SUMMARY.md  README.md  anomalydetectorchecklist.md  cdk.json  checklist.md  noxfile.py  pyproject.toml
.build/package/dev/20251007-150642/: metadata.json
.build/package/dev/20251007-150642/src/forecaster/: exceptions.py
.build/package/dev/20251007-150642/src/forecaster/inference/: batch_predictor.py  forecaster_handler.py
.github/instructions/: copilot-instructions.md
.github/workflows/: budget-guardrail.yml  ci-cd.yml  deploy.yml  drift-detection.yml  performance.yml  security.yml
artifacts/dev/: model_package-20251007-150642.sha256
dashboards/: cost_dashboard.json  predicted_cost.json  rmse_dashboard.json
dashboards/section11/: ResourceForecaster-RMSE-Drift-prod.json
demo/: SECTION_9_COMPLETION.md
demo/screenshots/: DEMO_STATUS.md  README.md  cost_analysis_sample.txt  rmse_trending_sample.txt
docker/batch/: Dockerfile  requirements.txt
docs/: ADR_MODEL_SELECTION.md  AWS_SETUP.md  DEMO_SCRIPT.md  FAQ.md  LESSONS_LEARNED.md  ROLLBACK_RUNBOOK.md  RUNBOOKS.md  SAGEMAKER.md  SECRETS_MANAGER.md  SECTION_11_RUNBOOK.md  TARGET_VARIABLES.md
infra/: __init__.py  app.py  forecaster_stack.py
lambda/batch/: handler.py
lambda/prediction/: handler.py
lambda/reconciler/: handler.py
lambda/retrain/: handler.py
lambda/shutdown/: handler.py
scripts/: capture_dashboard_screenshots.py  create_dashboards.py  create_sample_dashboards.py  deploy_flow.py  deploy_sagemaker_serverless.py  lambda_shutdown_nonprod.py  package_forecaster_artifacts.py  progress_tracker.py  rollback_model.py  sagemaker_inference.py  section11_budget_guardrail.py  section11_create_alarms_and_guardrails.py  teardown.py
src/forecaster/: __init__.py  audit.py  audit_reconciler.py  cli.py  config.py
src/forecaster/data/: __init__.py  collectors.py  processors.py  validators.py
src/forecaster/inference/: __init__.py  api_handler.py
src/forecaster/metrics/: __init__.py  collector.py
src/forecaster/monitoring/: __init__.py
src/forecaster/train/: __init__.py  forecaster_train.py  hyperparameter_tuning.py  model_factory.py
src/forecaster/validation/: __init__.py  validator.py
src/forecaster/workflow/: __init__.py  budget_alert_manager.py  scheduled_job_manager.py  step_functions_orchestrator.py
tests/: __init__.py  conftest.py  simple_workflow.py  test_audit_reconciler.py  test_audit_writes.py  test_cdk_iam_bindings.py  test_cdk_iam_resources.py  test_config.py  test_data_collectors.py  test_deploy_sagemaker_serverless.py  test_fidelity_gate.py  test_lambda_shutdown.py  test_lambda_shutdown_additional.py  test_lambda_shutdown_audit.py  test_reconciler_lambda.py  test_retrain_lambda.py  test_s3_bucket_transitions.py  test_sagemaker_cdk.py  test_section11_cdk.py  test_shutdown_lambda.py  test_validation.py  test_validation_simple.py  test_workflow.py
